force-app/main/default/objects/MC4SF__MC_Campaign_Hourly_Stats__c/MC4SF__MC_Campaign_Hourly_Stats__c.object-meta.xml
<CustomObject>
    <label>MC Campaign Hourly Stats</label>
    <nameField>
        <displayFormat>MCHourlyStats-{0}</displayFormat>
        <label>MC Campaign Hourly Stats Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MC Campaign Hourly Stats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>