force-app/main/default/objects/MC4SF__MC_Campaign_Hourly_Stats__c/fields/MC4SF__Emails_Sent__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Emails_Sent__c</fullName>
    <inlineHelpText>The total emails sent during the hour</inlineHelpText>
    <label>Emails Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>