force-app/main/default/objects/MC4SF__MC_Campaign_Hourly_Stats__c/fields/MC4SF__MC_Campaign__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__MC_Campaign__c</fullName>
    <label>MC Campaign</label>
    <referenceTo>MC4SF__MC_Campaign__c</referenceTo>
    <relationshipLabel>MC Campaign Hourly Stats</relationshipLabel>
    <relationshipName>MC_Campaign_Hourly_Stats</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>