force-app/main/default/objects/MC4SF__MC_Campaign_Hourly_Stats__c/fields/MC4SF__Recipients_Click__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Recipients_Click__c</fullName>
    <inlineHelpText>Unique clicks seen during the hour</inlineHelpText>
    <label>Recipients Click</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>