force-app/main/default/objects/MC4SF__MC_Campaign_Hourly_Stats__c/fields/MC4SF__Statistics_Hour__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Statistics_Hour__c</fullName>
    <label>Statistics Hour</label>
    <type>DateTime</type>
</CustomField>