force-app/main/default/objects/MC4SF__MC_Campaign_Hourly_Stats__c/fields/MC4SF__Unique_Opens__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Unique_Opens__c</fullName>
    <inlineHelpText>Unique opens seen during the hour</inlineHelpText>
    <label>Unique Opens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>